src/query/expression/tests/it/testdata/tyck-fail.txt
ast            : true AND 1
raw expr       : and(true, 1_u8)
checked expr   : and<Boolean, Boolean>(true, CAST(1_u8 AS Boolean))
optimized expr : true
output type    : Boolean
output domain  : Unknown
output         : true


ast            : NOT NOT 'a'
raw expr       : not(not("a"))
checked expr   : not<Boolean>(not<Boolean>(CAST("a" AS Boolean)))
optimized expr : true
output type    : Boolean
output domain  : Unknown
output         : true


error: 
  --> SQL:1:1
  |
1 | least(1, 2, 3, a)
  | ^^^^^^^^^^^^^^^^^ no overload satisfies `least(UInt8, UInt8, UInt8, Boolean)`

has tried possible overloads:
  least(Int16, Int16, Int16, Int16) :: Int16  : unable to unify `Boolean` with `Int16`



ast            : 'a' and 1
raw expr       : and("a", 1_u8)
checked expr   : and<Boolean, Boolean>(CAST("a" AS Boolean), CAST(1_u8 AS Boolean))
optimized expr : true
output type    : Boolean
output domain  : Unknown
output         : true


error: 
  --> SQL:1:1
  |
1 | get(create_array(1, 2), 'a')
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no overload satisfies `get(Array(UInt8), String)`

has tried possible overloads:
  get(NULL, Int16 NULL) :: NULL               : unable to unify `Array(UInt8)` with `NULL`
  get(Array(T0) NULL, NULL) :: NULL           : unable to unify `String` with `NULL`
  get(Array(T0), Int16) :: T0                 : unable to unify `String` with `Int16`
  get(Array(T0) NULL, Int16 NULL) :: T0 NULL  : unable to unify `String` with `Int16`



error: 
  --> SQL:1:1
  |
1 | get_tuple(1)(create_tuple(true))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no overload satisfies `get_tuple(1)((Boolean,))`



